--- a/server/package.json
+++ b/server/package.json
@@ -9,18 +9,18 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "mongoose": "^7.3.0",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.1.4",
-    "multer": "^1.4.5-lts.1",
-    "jsonwebtoken": "^9.0.0",
-    "bcryptjs": "^2.4.3",
-    "helmet": "^7.0.0",
+    "express": "^4.18.2",
     "express-rate-limit": "^6.7.1",
-    "morgan": "^1.10.0",
     "express-validator": "^7.0.1",
-    "ipfs-http-client": "^60.0.0",
+    "helmet": "^7.0.0",
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^7.3.0",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "nft.storage": "^7.2.0",
     "web3": "^4.0.0"
   },
   "devDependencies": {
@@ -34,5 +34,6 @@
     "express"
   ],
   "author": "Your Name",
-  "license": "MIT"
+  "license": "MIT",
+  "type": "module"
 }
